[package]
name = "tree_bench"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merkle = "1.11.0"

[dev-dependencies]
criterion = "0.3"
ring = "0.16.15"
rand = "0.7.3"

[[bench]]
name = "my_benchmark"
harness = false